# Junction

./: .eslintignore  .eslintrc.json  .eslintrc.yaml  .eslintrc.yml  .gitattributes  .gitignore  .prettierignore  .prettierrc.yaml  0001-do-not-test-exec.patch  Junction.doap  Makefile  README.md  meson.build  notes.md  package-lock.json  package.json  prototype.blp  re.sonny.Junction  re.sonny.Junction.json  re.sonny.Junction.yaml  rollup.config.js
.github/workflows/: CI.yaml
.husky/: pre-commit
build-aux/flatpak/: glib-desktopappinfo.patch
data/: meson.build  re.sonny.Junction.appdata.xml  re.sonny.Junction.desktop  re.sonny.Junction.gschema.xml  re.sonny.Junction.metainfo.xml  re.sonny.Junction.service  screenshot-file.xcf  screenshot.xcf
po/: LINGUAS  POTFILES  ar.po  be.po  ca.po  cs.po  de.po  es.po  eu.po  fa.po  fi.po  fr.po  gl.po  he.po  hi.po  hr.po  id.po  it.po  ja.po  meson.build  nb_NO.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  re.sonny.Junction.pot  ro.mo  ro.po  ru.po  si.po  sk.po  sv.po  ta.po  tr.po  uk.po  zh_Hans.po
src/: AppButton.blp  AppButton.js  AppButton.ui  Entry.js  ShortcutsWindow.blp  ShortcutsWindow.js  ShortcutsWindow.ui  about.js  application.js  bin.js  common.js  flatpak.js  local.js  main.js  meson.build  re.sonny.Junction  setup.js  style.css  user.js  util.js  welcome.blp  welcome.css  welcome.js  welcome.ui  window.blp  window.css  window.js  window.ui
test/: assert.js  setup.js  util.test.js  uvu.js
www/public/: _redirects  index.html
